compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__internal_types_from_a_dependency_are_ignored.snap
---
source: compiler-core/src/language_server/tests/completion.rs
assertion_line: 1109
expression: "import dep\n\npub fn wibble(\n    _: String,\n) -> Nil {\n    Nil\n}"
---
import dep

pub fn wibble(
|    _: String,
) -> Nil {
    Nil
}


----- Completion content -----
BitArray
  kind:   Class
  detail: Type
  sort:   4_BitArray
Bool
  kind:   Class
  detail: Type
  sort:   4_Bool
Float
  kind:   Class
  detail: Type
  sort:   4_Float
Int
  kind:   Class
  detail: Type
  sort:   4_Int
List
  kind:   Class
  detail: Type
  sort:   4_List
Nil
  kind:   Class
  detail: Type
  sort:   4_Nil
Result
  kind:   Class
  detail: Type
  sort:   4_Result
String
  kind:   Class
  detail: Type
  sort:   4_String
UtfCodepoint
  kind:   Class
  detail: Type
  sort:   4_UtfCodepoint
