compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__internal_types_from_root_package_are_in_the_completions.snap
---
source: compiler-core/src/language_server/tests/completion.rs
assertion_line: 1063
expression: "import dep\n\npub fn wibble(\n    _: String,\n) -> Nil {\n    Nil\n}"
---
import dep

pub fn wibble(
|    _: String,
) -> Nil {
    Nil
}


----- Completion content -----
BitArray
  kind:   Class
  detail: Type
  sort:   4_BitArray
Bool
  kind:   Class
  detail: Type
  sort:   4_Bool
Float
  kind:   Class
  detail: Type
  sort:   4_Float
Int
  kind:   Class
  detail: Type
  sort:   4_Int
List
  kind:   Class
  detail: Type
  sort:   4_List
Nil
  kind:   Class
  detail: Type
  sort:   4_Nil
Result
  kind:   Class
  detail: Type
  sort:   4_Result
String
  kind:   Class
  detail: Type
  sort:   4_String
UtfCodepoint
  kind:   Class
  detail: Type
  sort:   4_UtfCodepoint
dep.Alias
  kind:   Class
  detail: Type
  sort:   3_dep.Alias
  edits:
    [3:0-3:0]: "dep.Alias"
dep.AnotherType
  kind:   Class
  detail: Type
  sort:   3_dep.AnotherType
  edits:
    [3:0-3:0]: "dep.AnotherType"
