compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__internal_values_from_a_dependency_are_ignored.snap
---
source: compiler-core/src/language_server/tests/completion.rs
assertion_line: 1125
expression: import dep
---
|import dep


----- Completion content -----
Error
  kind:   Constructor
  detail: rakun
  sort:   4_Error
False
  kind:   EnumMember
  detail: rakun
  sort:   4_False
Nil
  kind:   EnumMember
  detail: rakun
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: rakun
  sort:   4_Ok
True
  kind:   EnumMember
  detail: rakun
  sort:   4_True
