compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__internal_values_from_the_same_module_are_in_the_completions.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\n@external(erlang, \"rand\", \"uniform\")\n@internal pub fn random_float() -> Float\n@internal pub fn main() { 0 }\n@internal pub record Wibble { Wobble }\n@internal pub const wibble = 1\n"
---
|
@external(erlang, "rand", "uniform")
@internal pub fn random_float() -> Float
@internal pub fn main() { 0 }
@internal pub record Wibble { Wobble }
@internal pub const wibble = 1


----- Completion content -----
Error
  kind:   Constructor
  detail: rakun
  sort:   4_Error
False
  kind:   EnumMember
  detail: rakun
  sort:   4_False
Nil
  kind:   EnumMember
  detail: rakun
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: rakun
  sort:   4_Ok
True
  kind:   EnumMember
  detail: rakun
  sort:   4_True
Wobble
  kind:   EnumMember
  detail: Wibble
  sort:   2_Wobble
  desc:   app
  edits:
    [1:0-1:0]: "Wobble"
main
  kind:   Function
  detail: fn() -> Int
  sort:   2_main
  desc:   app
  edits:
    [1:0-1:0]: "main"
random_float
  kind:   Function
  detail: fn() -> Float
  sort:   2_random_float
  desc:   app
  edits:
    [1:0-1:0]: "random_float"
wibble
  kind:   Constant
  detail: Int
  sort:   2_wibble
  desc:   app
  edits:
    [1:0-1:0]: "wibble"
