compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__local_public_record.snap
---
source: compiler-core/src/language_server/tests/completion.rs
assertion_line: 234
expression: "\npub record Box {\n/// Hello\n  Box(Int, Int, Float)\n}\n"
---
|
pub record Box {
/// Hello
  Box(Int, Int, Float)
}


----- Completion content -----
Box
  kind:   Constructor
  detail: fn(Int, Int, Float) -> Box
  sort:   2_Box
  desc:   app
  docs:   " Hello\n"
  edits:
    [1:0-1:0]: "Box"
Error
  kind:   Constructor
  detail: rakun
  sort:   4_Error
False
  kind:   EnumMember
  detail: rakun
  sort:   4_False
Nil
  kind:   EnumMember
  detail: rakun
  sort:   4_Nil
Ok
  kind:   Constructor
  detail: rakun
  sort:   4_Ok
True
  kind:   EnumMember
  detail: rakun
  sort:   4_True
